# Chrono

./: .gitignore  README.md  WorkClock.cpp
.github/workflows/: release.yml
Launcher/: .gitignore  README.md  SETUP.md  index.html  package-lock.json  package.json  resource.rc  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
Launcher/.github/: copilot-instructions.md
Launcher/.github/workflows/: release.yml
Launcher/backend/: .env.example  README.md  next.config.js  package-lock.json  package.json
Launcher/backend/app/: page.tsx
Launcher/backend/app/api/admin/licenses/: route.ts
Launcher/backend/lib/: db.ts  email.ts  schema.sql  utils.ts
Launcher/backend/scripts/: add-license.js  check-licenses.js  check-tables.js  migrate.js
Launcher/src/: App.svelte  app.css
Launcher/src-tauri/: Cargo.toml  tauri.conf.json
Launcher/src-tauri/icons/: icon.icns
Launcher/src-tauri/src/: commands.rs  main.rs
Launcher/src-tauri/src/core/: logic.rs  mod.rs  models.rs
Launcher/src-tauri/src/storage/: db.rs  schema.sql
Launcher/src/lib/: api.ts  types.ts
Launcher/src/lib/components/: Achievements.svelte  Advisor.svelte  Analytics.svelte  ContributionDialog.svelte  Dashboard.svelte  FocusWellbeing.svelte  GoalForm.svelte  Goals.svelte  Invoices.svelte  ProFeatureModal.svelte  SessionForm.svelte  Sessions.svelte  SettingsPage.svelte  Simulator.svelte  UpgradePrompt.svelte  VoiceInput.svelte
Launcher/src/lib/i18n/: de.ts  en.ts  es.ts  fr.ts  ja.ts  pt.ts  types.ts  zh.ts
Launcher/src/lib/stores/: i18n.ts  license.ts  theme.ts
(+7 files in other folders)
